--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"dependencies": {
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
-		"mongoose": "^6.0.12"
+		"mongoose": "^6.0.12",
+		"slugify": "^1.6.2"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
