--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"author": "yhertekin",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
 		"mongoose": "^6.0.12",
